--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,14 @@
+2002-03-29  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* Make-lang.in (builtins.o): Update.
+	* boehm.c (get_boehm_type_descriptor): Update.
+	* builtins.c: Include langhooks.h.
+	* decl.c (java_init_decl_processing): Update.
+	* java-tree.h (java_type_for_mode, java_type_for_size): New.
+	* lang.c (LANG_HOOKS_TYPE_FOR_MODE, LANG_HOOKS_TYPE_FOR_SIaZE):
+	Redefine.
+	* typeck.c (type_for_mode, type_for_size): Update.
+
 2002-03-29  Martin Kahlert  <martin.kahlert@infineon.com>
 
 	* lex.c (java_new_lexer): Alias "646" to DEFAULT_ENCODING.
