* config.gcc (*-*-freebsd*): Enable creation of libgcc_s.so. 	* config/t-slibgcc-elf-ver (SHLIB_LC): Add macro and use it. 	No functional change except ... 	* config/t-slibgcc-nolc-override (SHLIB_LC): Override it.  New file. 	* doc/install.texi (*-*-freebsd*): Document port configuration.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51574 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/install.texi
+++ b/gcc/doc/install.texi
@@ -2079,6 +2079,8 @@ should properly complete the bootstrap).  Other CPU architectures
 supported by FreeBSD will require additional configuration tuning in, at
 the very least, both boehm-gc and libffi.
 
+Shared @file{libgcc_s.so} is now built and installed by default.
+
 @html
 </p>
 <hr>
