--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-29  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (check_inner_circular_reference): Ignore incomplete
+	types.
+
 2002-03-29  Martin Kahlert  <martin.kahlert@infineon.com>
 
 	* lex.c (java_new_lexer): Alias "646" to DEFAULT_ENCODING.
