* config.gcc (*-*-freebsd*): Enable creation of libgcc_s.so. 	* config/t-slibgcc-elf-ver (SHLIB_LC): Add macro and use it. 	No functional change except ... 	* config/t-slibgcc-nolc-override (SHLIB_LC): Override it.  New file. 	* doc/install.texi (*-*-freebsd*): Document port configuration.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51577 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-29  Loren J. Rittle  <ljrittle@acm.org>
+
+	* config.gcc (*-*-freebsd*): Enable creation of libgcc_s.so.
+	* config/t-slibgcc-elf-ver (SHLIB_LC): Add macro and use it.
+	No functional change except ...
+	* config/t-slibgcc-nolc-override (SHLIB_LC): Override it.  New file.
+	* doc/install.texi (*-*-freebsd*): Document port configuration.
+
 2002-03-29  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/5964
