--- a/gcc-3_1-branch/gcc/doc/install.texi
+++ b/gcc-3_1-branch/gcc/doc/install.texi
@@ -2077,6 +2077,8 @@ At this time, @option{--enable-threads} is not compatible with
 The Elxsi's C compiler has known limitations that prevent it from
 compiling GCC@.  Please contact @email{mrs@@wrs.com} for more details.
 
+Shared @file{libgcc_s.so} is now built and installed by default.
+
 @html
 </p>
 <hr>
