--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-29  Martin Kahlert  <martin.kahlert@infineon.com>
+
+	* parse.y (do_resolve_class): Fix infinite recursion.
+
 2002-03-29  Tom Tromey  <tromey@redhat.com>
 
 	* parse.y (check_inner_circular_reference): Ignore incomplete
