--- a/gcc-3_1-branch/boehm-gc/ChangeLog
+++ b/gcc-3_1-branch/boehm-gc/ChangeLog
@@ -1,3 +1,15 @@
+2002-03-29  Hans Boehm  <Hans_Boehm@hp.com>
+
+	* linux_threads.c (return_free_lists): Clear fl[i] unconditionally.
+	(GC_local_gcj_malloc): Add assertion.
+	(start_mark_threads): Fix abort message.
+	* mark.c (GC_mark_from): Generalize assertion.
+	* reclaim.c (GC_clear_fl_links): New function.
+	(GC_start_reclaim): Must clear some freelist links.
+	* include/private/specific.h, specific.c: Add assertions.
+	Safer definition for INVALID_QTID, quick_thread_id.  Fix/add comments.
+	Rearrange tse fields.
+
 2002-03-24  Jeff Sturm  <jsturm@one-point.com>
 
 	* linux_threads.c (GC_get_nprocs): Close file descriptor.
