--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-29  Dale Johannesen <dalej@apple.com>
+
+	* loop.c (combine_movables): Do allow combination of pseudos.
+
 2002-03-29  Loren J. Rittle  <ljrittle@acm.org>
 
 	* config.gcc (*-*-freebsd*): Enable creation of libgcc_s.so.
