--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-29  Loren J. Rittle  <ljrittle@acm.org>
+
+	* doc/install.texi (*-*-freebsd*): Fix last commit.
+
 2002-03-29  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.c (x86_arch_always_fancy_math_387): New.
