--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-06  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* g++.dg/opt/float1.C: New test.
+
 2003-10-04  Roger Sayle  <roger@eyesopen.com>
 
 	PR c++/11409
