PR c++/10174 	* call.c (initialize_reference): Tweak error message.
	PR c++/12337
	* init.c (build_new_1): Make sure that the expression returned is
	not an lvalue.

	PR c++/12344, c++/12236, c++/8656
	* decl.c (start_function): Do not ignore attributes embedded in a
	function declarator.

	PR c++/12337
	* g++.dg/init/new9.C: New test.

	PR c++/12334, c++/12236, c++/8656
	* g++.dg/ext/attrib8.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72179 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2003-10-06  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12337
+	* g++.dg/init/new9.C: New test.
+	
+	PR c++/12334, c++/12236, c++/8656
+	* g++.dg/ext/attrib8.C: New test.
+
 2003-10-06  Wolfgang Bangerth  <bangerth@ticam.utexas.edu>
 
 	* g++.dg/opt/cfg2.C: New test.
