2003-10-07  Paolo Carlini  <pcarlini@unitus.it>
	PR libstdc++/11740
	* config/locale/gnu/ctype_members.cc (ctype<wchar_t>::do_is):
	Fix to actually return (M & m) != 0 as per 22.2.1.1.2.
	* config/locale/generic/ctype_members.cc: Same.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72187 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_3-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2003-10-07  Paolo Carlini  <pcarlini@unitus.it>
+
+	PR libstdc++/11740
+	* config/locale/gnu/ctype_members.cc (ctype<wchar_t>::do_is):
+	Fix to actually return (M & m) != 0 as per 22.2.1.1.2.
+	* config/locale/generic/ctype_members.cc: Same.
+
 2003-10-02  Harald Boehme  <boehme@informatik.hu-berlin.de>
 
 	PR libstdc++/12451
