--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-07  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/template/ptrmem4.C: Revise in view of fixes for PR
+	c++/10147.
+
 2003-10-06  Bob Wilson  <bob.wilson@acm.org>
 
 	* g++.dg/template/spec10.C: Set exit value to zero on success.  Fix
