--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-10-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* fixinc/inclhack.def (stdio_va_list): Removed _ap fix.
+	(irix_stdio_va_list): Don't require leading printf, IRIX 6.5.21
+	introduced some multi-line prototypes.
+	* fixinc/fixincl.x: Regenerate.
+	Fixes PR libf2c/12263.
+
 2003-10-08  Timo Kokkonen  <tjko@iki.fi>
             Eric Botcazou  <ebotcazou@libertysurf.fr>
 
