* g++.dg/ext/attrib8.C: Only run it on x86 targets.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72279 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-09  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/ext/attrib8.C: Only run it on x86 targets.
+
 2003-10-07  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/template/ptrmem4.C: Revise in view of fixes for PR
