PR optimization/12510 	Backport from mainline:
	2003-09-08  Jakub Jelinek  <jakub@redhat.com>

	* toplev.c (rest_of_compilation): Call split_all_insns before
	regstack if optimizing but not scheduling after reload.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72286 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-09  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	* gcc.dg/20031009-1.c: New test.
+
 2003-10-09  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/ext/attrib8.C: Only run it on x86 targets.
