--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/12544
+	* function.c (put_var_into_stack): Don't generate ADDRESSOFs
+	for DECL_NONLOCAL decls.
+
 2003-10-09  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR optimization/12510
