--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/compile/20031011-1.c: New test.
+
 2003-10-09  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	* gcc.dg/20031009-1.c: New test.
