--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-14  Steven Bosscher  <steven@gcc.gnu.org>
+
+	* g++.dg/tls/init-2.C: Fix. Expect two warnings.
+
 2003-10-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.c-torture/compile/20031011-1.c: New test.
