PR c/11885         * stor-layout.c (update_alignment_for_field): Packed non-bit-fields         get byte alignment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72484 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-14  Jason Merrill  <jason@redhat.com>
+
+	PR c/11885
+	* stor-layout.c (update_alignment_for_field): Packed non-bit-fields 
+	get byte alignment.
+
 2003-10-14  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* fixinc/inclhack.def (alpha_pthread_gcc): New fix.
