--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2003-10-14  Jason Merrill  <jason@redhat.com>
+
+	PR c++/11878
+	* tree.c (build_target_expr_with_type): Call force_rvalue for
+	classes with non-trivial copy ctors.
+
+	PR c++/11063
+	* typeck.c (build_modify_expr): Call convert rather than abort.
+
 2003-10-06  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/10147
