PR c++/7939 	* typeck.c (comptypes): Don't ICE when its first argument is 	error_mark_node. 	(compparms): Reverse the arguments of same_type_p.
	PR c++/7939
	* g++.dg/template/crash11.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72546 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-15  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/7939
+	* g++.dg/template/crash11.C: New test.
+
 2003-10-14  Steven Bosscher  <steven@gcc.gnu.org>
 
 	* g++.dg/tls/init-2.C: Fix. Expect two warnings.
