PR c++/12369 	* g++.dg/template/friend25.C: New test.
	PR c++/7939
	* g++.dg/template/crash11.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72548 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,5 +1,13 @@
 2003-10-15  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
+	PR c++/12369
+	* decl.c (grokdeclarator): Handle TEMPLATE_ID_EXPR if friend
+	is a member of other class.
+	* friend.c (do_friend): Don't build TEMPLATE_DECL if friend
+	is a specialization of function template.
+
+2003-10-15  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
 	PR c++/7939
 	* typeck.c (comptypes): Don't ICE when its first argument is
 	error_mark_node.
