--- a/gcc-3_3-branch/zlib/ChangeLog
+++ b/gcc-3_3-branch/zlib/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-16  Release Manager
+
+	* GCC 3.3.2 Released.
+
 2003-08-04  Release Manager
 
 	* GCC 3.3.1 Released.
@@ -245,7 +249,7 @@ Changes in 1.0.6 (19 Jan 1998)
 - use _fdopen instead of fdopen for MSC >= 6.0 (Thomas Fanslau)
 - added makelcc.bat for lcc-win32 (Tom St Denis)
 - in Makefile.dj2, use copy and del instead of install and rm (Frank Donahoe)
-- Avoid expanded $Id: ChangeLog,v 1.6.20.4 2003/08/04 11:53:34 mmitchel Exp $. Use "rcs -kb" or "cvs admin -kb" to avoid Id expansion.
+- Avoid expanded $Id: ChangeLog,v 1.6.20.5 2003/08/04 12:50:20 mmitchel Exp $. Use "rcs -kb" or "cvs admin -kb" to avoid Id expansion.
 - check for unistd.h in configure (for off_t)
 - remove useless check parameter in inflate_blocks_free
 - avoid useless assignment of s->check to itself in inflate_blocks_new
