* doc/include/gcc-common.texi: Bump version number. 	* version.c (version_string): Reset to prerelease format.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72686 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-19  Mark Mitchell  <mark@codesourcery.com>
+
+	* doc/include/gcc-common.texi: Bump version number.
+	* version.c (version_string): Reset to prerelease format.
+
 2003-10-18  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* doc/extend.texi: Fix typos.
