--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-20  Zack Weinberg  <zack@codesourcery.com>
+
+	* fixinc/inclhack.def (hpux11_snprintf): New edit.
+	* fixinc/fixincl.x: Regenerate.
+	* fixinc/tests/base/stdio.h: Add test for hpux11_snprintf.
+
 2003-05-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/ia64/unwind-ia64.c (uw_update_reg_address): Handle
