2003-10-20  Benjamin Kosnik  <bkoz@redhat.com>
	PR libstdc++/10081
	* include/bits/basic_ios.h (basic_ios::basic_ios): Initialize
	_M_fctype, _M_fnumput, _M_fnumget.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72740 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_3-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-20  Benjamin Kosnik  <bkoz@redhat.com>
+
+	PR libstdc++/10081
+	* include/bits/basic_ios.h (basic_ios::basic_ios): Initialize
+	_M_fctype, _M_fnumput, _M_fnumget.
+
 2003-10-16  Release Manager
 
 	* GCC 3.3.2 Released.
