PR debug/12500         * dbxout.c (dbxout_typedefs): Use COMPLETE_OR_VOID_TYPE_P.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72799 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-22  David Taylor <dtaylor@emc.com>
+
+	PR debug/12500
+	* dbxout.c (dbxout_typedefs): Use COMPLETE_OR_VOID_TYPE_P.
+
 2003-10-20  Zack Weinberg  <zack@codesourcery.com>
 
 	* fixinc/inclhack.def (hpux11_snprintf): New edit.
