--- a/gcc-3_3-branch/libjava/ChangeLog
+++ b/gcc-3_3-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-24  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* prims.cc (catch_segv): Unblock correct signal.
+	(catch_fpe): Likewise.
+
 2003-10-16  Release Manager
 
 	* GCC 3.3.2 Released.
