PR target/12712 	* reg-stack.c (convert_regs_1): Create an arbitrary input stack 	if the block has no predecessors. 	(convert_regs_2): Document the problem with successors whose 	only predecessor is the block to be processed. 	(convert_regs): Don't create the arbitrary input stack here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72925 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-25  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* g++.dg/opt/reg-stack3.C: New test.
+
 2003-10-16  Release Manager
 
 	* GCC 3.3.2 Released.
