--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-26  Ottavio Campana <ottavio@campana.vi.it>
+
+	PR target/12690
+	* config/i386/mmintrin.h (_mm_set1_pi8): Fix comment.
+
 2003-10-25  Bruce Korb  <bkorb@gnu.org>
 
 	* gcc/fixinc/tests/base/ansi/string.h:
