PR target/12654 	* config/alpha/alpha.c (alpha_emit_conditional_branch): Don't do 	comparison against constant by adjusting the argument except for 	EQ and NE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@72990 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-10-27  Falk Hueffner  <falk@debian.org>
+
+	PR target/12654
+	* config/alpha/alpha.c (alpha_emit_conditional_branch): Don't do
+	comparison against constant by adjusting the argument except for
+	EQ and NE.
+
 2003-10-26  Ottavio Campana <ottavio@campana.vi.it>
 
 	PR target/12690
