Add missing ChangeLog entry for gcc.c-torture/execute/20031020-1.c.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73016 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-28  Falk Hueffner  <falk@debian.org>
+
+	PR target/12654
+	* gcc.c-torture/execute/20031020-1.c: New test.
+
 2003-10-25  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* g++.dg/opt/reg-stack3.C: New test.
