* fixinc/inclhack.def (stdio_va_list): Allow tab before va_list. 	Merge two substitutions. 	* fixinc/fixincl.x: Regenerate. 	Fixes PR bootstrap/12666.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73225 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-03  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* fixinc/inclhack.def (stdio_va_list): Allow tab before va_list.
+	Merge two substitutions.
+	* fixinc/fixincl.x: Regenerate.
+	Fixes PR bootstrap/12666.
+
 2003-10-28  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	PR target/11598
