2003-11-04  H.J. Lu  <hongjiu.lu@intel.com>
	Backport from 3.4-branch
	2003-04-25  H.J. Lu  <hjl@gnu.org>

	* gcc.dg/ia64-sync-4.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73252 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from 3.4-branch
+	2003-04-25  H.J. Lu  <hjl@gnu.org>
+
+	* gcc.dg/ia64-sync-4.c: New test.
+
 2003-10-28  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	PR libgcj/10610
