--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,25 @@
+2003-11-04  H.J. Lu  <hongjiu.lu@intel.com>
+ 
+	Backport from 3.4-branch
+	2003-04-25  H.J. Lu   <hjl@gnu.org>
+
+	* config/ia64/ia64.c (ia64_expand_compare_and_swap): Add rmode
+	for return mode.
+	(ia64_expand_builtin): Set rmode to SImode for
+	IA64_BUILTIN_BOOL_COMPARE_AND_SWAP_SI,
+	IA64_BUILTIN_VAL_COMPARE_AND_SWAP_SI and
+	IA64_BUILTIN_BOOL_COMPARE_AND_SWAP_DI. Set remode to DImode
+	for IA64_BUILTIN_VAL_COMPARE_AND_SWAP_DI.
+
+	2003-04-24  H.J. Lu  <hjl@gnu.org>
+
+	* config/ia64/ia64.c (ia64_init_builtins): Add si_ftype_pdi_di_di
+	for __sync_bool_compare_and_swap_di for int return type.
+
+	* config/ia64/ia64intrin.h (__sync_bool_compare_and_swap_di):
+	Change return type to int.
+	(__sync_bool_compare_and_swap): Likewise.
+
 2003-11-03  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	* doc/contrib.texi: Add Giovanni Bajo, Dara Hazeghi, Falk Hueffner,
