--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-03  Alexander Kabaev  <ak03@gte.com>
+
+	* real.c (encode_ieee_single): Ensure proper promotion.
+
 2003-11-04  H.J. Lu <hongjiu.lu@intel.com>
 
 	Backport from 3.4-branch
