* config/s390/s390.c (s390_function_arg_pass_by_reference): Return 	true for all arguments larger than 8 bytes, as well as for all vector 	type arguments. 	* config/s390/s390.h (RETURN_IN_MEMORY): Likewise for return values.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73315 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-06  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.c (s390_function_arg_pass_by_reference): Return
+	true for all arguments larger than 8 bytes, as well as for all vector
+	type arguments.
+	* config/s390/s390.h (RETURN_IN_MEMORY): Likewise for return values.
+
 2003-11-05  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/10339
