Backport from 3.4-branch
	2003-10-08  Giovanni Bajo  <giovannibajo@libero.it>

	* g++.dg/parse/error7.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73357 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-08  Bernardo Innocenti  <bernie@develer.com>
+
+	Backport from 3.4-branch
+
+	2003-10-08  Giovanni Bajo  <giovannibajo@libero.it>
+
+	* g++.dg/parse/error7.C: New test.
+
 2003-11-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from 3.4-branch
