--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* gcc.dg/trampoline-1.c: New test.
+
 2003-11-08  Roger Sayle  <roger@eyesopen.com>
 
 	Backport from mainline
