--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-12  Alexey Starovoytov  <alexey.starovoytov@sun.com>
+
+	PR optimization/12953
+	* c-objc-common.c (inline_forbidden_p): Added check for BUILT_IN
+	before switch by FUNCTION_CODE.
+
 2003-11-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	PR target/12865
