--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* g++.dg/opt/const3.C: New test.
+
 2003-11-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* gcc.dg/trampoline-1.c: New test.
