Backport from 3.4-branch.
	2003-06-25  Giovanni Bajo  <giovannibajo@libero.it>

        PR c++/2094
        * pt.c (unify): Add support for PTRMEM_CST and
        FIELD_DECL unification.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73574 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,6 +1,16 @@
+2003-11-14  Bernardo Innocenti  <bernie@develer.com>
+
+	Backport from 3.4-branch.
+
+	2003-06-25  Giovanni Bajo  <giovannibajo@libero.it>
+
+        PR c++/2094
+        * pt.c (unify): Add support for PTRMEM_CST and
+        FIELD_DECL unification.
+
 2003-11-08  Bernardo Innocenti  <bernie@develer.com>
 
-	Backport from 3.4-branch
+	Backport from 3.4-branch.
 
 	2003-10-08  Giovanni Bajo  <giovannibajo@libero.it>
 
