--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,28 @@
+2003-11-14  Matthias Klose  <doko@debian.org>
+
+	Backport from mainline
+
+	2003-06-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* function.c (trampolines_created): New variable.
+	(expand_function_end): Set it when doing INITIALIZE_TRAMPOLINE.
+	* function.h (trampolines_created): Add.
+	* config/s390/linux.h (ASM_FILE_END): Define.
+	* config/alpha/linux-elf.h (ASM_FILE_END): Define.
+	* config/m68k/linux.h (ASM_FILE_END): Define.
+	* config/rs6000/linux.h (ASM_FILE_END): Define.
+	* config/rs6000/linux64.h (ASM_FILE_END): Define.
+	* config/sparc/linux.h (ASM_FILE_END): Define.
+	* config/sparc/linux64.h (ASM_FILE_END): Define.
+	* config/i386/i386.c (ix86_asm_file_end): Use SUBTARGET_FILE_END.
+	* config/i386/linux.h (SUBTARGET_FILE_END): Define.
+	* config/i386/linux64.h (SUBTARGET_FILE_END): Define.
+
+	2003-06-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* mklibgcc.in: Propagate .note.GNU-stack section if needed into
+	the .hidden assembly stubs.
+
 2003-11-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR optimization/12926
@@ -17951,4 +17976,3 @@ cp:
 	* mips.h (FUNCTION_ARG_REGNO_P): Fix parentheses.
 
 See ChangeLog.7 for earlier changes.
-
