Fix links in online manuals. 	* doc/invoke.texi (H8/300 Options): @xref to ld, not ld.info.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73714 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-18  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	Fix links in online manuals.
+	* doc/invoke.texi (H8/300 Options): @xref to ld, not ld.info.
+
 2003-11-17  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* doc/invoke.texi (Warning Options): Simplify and clarify the
