Backport 2003-03-26  Alan Modra  <amodra@bigpond.net.au> 	* cppinit.c (init_standard_includes): Add both "translated" and 	non-translated header paths.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73715 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-19  Alan Modra  <amodra@bigpond.net.au>
+
+	Backport 2003-03-26  Alan Modra  <amodra@bigpond.net.au>
+	* cppinit.c (init_standard_includes): Add both "translated" and
+	non-translated header paths.
+
 2003-11-18  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	Fix links in online manuals.
