* MAINTAINERS: Add myself as a vax port maintainer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@73857 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/ChangeLog
+++ b/gcc-3_3-branch/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-21  Matt Thomas  <matt@3am-software.com>
+
+	* MAINTAINERS: Add myself as a vax port maintainer.
+
 2003-10-16  Release Manager
 
 	* GCC 3.3.2 Released.
