* config/s390/s390.md ("cmpint_di"): Fix incorrect instruction lengths.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74041 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-29  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.md ("cmpint_di"): Fix incorrect instruction lengths.
+
 2003-11-19  Alan Modra  <amodra@bigpond.net.au>
 
 	Backport 2003-03-26  Alan Modra  <amodra@bigpond.net.au>
