--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-01  Gabriel Dos Reis <gdr@integrable-solutions.net>
+
+	* doc/c-tree.texi (Function Bodies): Update HANDLER documentation.
+
 2003-11-29  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.md ("cmpint_di"): Fix incorrect instruction lengths.
