* io.c (gfc_match_format): Check for missing format label.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74135 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-01  Feng Wang  <fengwang@nudt.edu.cn>
+
+	* io.c (gfc_match_format): Check for missing format label.
+
 2003-11-30 Huang Chun <chunhuang73@hotmail.com>
 
 	PR fortran/13155
