--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2003-12-01  Roger Sayle  <roger@eyesopen.com>
+
+	PR optimization/11634
+	* recog.c (split_insn): Factor test of INSN_P and handling of
+	set_noop_p out of here into the two callers.
+	(split_all_insns): Add INSN_P test and set_noop_p handling here.
+	If deleting a no-op set after reload that has a REG_UNUSED note,
+	mark the basic block as changed and recalculate life information.
+	(split_all_insns_noflow): Add INSN_P test and set_noop_p handling
+	here.
+
 2003-12-01  Zack Weinberg  <zack@codesourcery.com>
 
 	PR 12505
